[package]
name = "uni_me"
version = "0.1.0"
authors = ["Binlogo <binboy@live.com>"]
edition = "2018"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uniffi = "0.8"
uniffi_macros = "0.8"

[build-dependencies]
uniffi_build = "0.8"